# This file documents the revision history for Perl extension Catalyst.

        - Add backwards compatibility method for Catalyst::Log->body, which
          has been made private (t0m)
        - Fix so that calling $c->req->parameters(undef) does not flatten
          the request parameters with undef + test (t0m)
        - Fix so that width of table of unattached actions for debugging
          ::DispatchType::Chained varies according to your terminal width
          (Oleg Kostyuk)
        - Fix warning message about linearized @ISA in Catalyst::Component
          (Emanuele Zeppieri)
        - Require MX::MethodAttributes 0.06 to avoid issues with saying
          use base 'Catalyst::Controller'; use Moose; losing actions (t0m)
        - Fix all of t0m's typos in ::Upgrading and ::Delta (hobbs)

5.80001 2009-04-18 22:18
        - Don't inline the constructor for Catalyst::Log to avoid a
          warning on recent Moose versions.
        - Add delta documentation
        - Clean up recursion errors
        - Extra cross links in dispatch types POD (Ian Wells)
        - Test uri_with clears query params when they are set to undef
          (Ian Wells)
        - Complain about old Catalyst::Devel versions which generated
          ->setup(qw/-Debug... etc. as this is not recommended (t0m)

5.8000_07 2009-04-12 13:37
        - Add the Catalyst::Dispatcher->dispatch_type method (ash)
        - Throw an exception rather than loading an app if an action
          tries to chain to itself (t0m)
          - Tests for this
        - Change the $c->visit and $c->go methods to optionally take
          CaptureArgs, making them useful to call ActionChains with (t0m)
          - Tests for this (radek)
        - Fix _invoke_as_component method to find the proper action instance
          for dispatchable actions so that ->visit or ->going to ActionChains
          with qw/Class::Name method_name/ works correctly (t0m)
          - Tests for this (radek)